Translation into English (III)

--- a/backend/C_module/Makefile
+++ b/backend/C_module/Makefile
@@ -1,5 +1,5 @@
-all: main.cpp aleatorios.cpp element.cpp funciones.cpp gestionarFile.cpp point.cpp
-	g++ -std=c++14 main.cpp aleatorios.cpp element.cpp funciones.cpp gestionarFile.cpp point.cpp -o main
+all: main.cpp element.cpp functions.cpp manageFile.cpp point.cpp
+	g++ -g -std=c++14 main.cpp element.cpp functions.cpp manageFile.cpp point.cpp -o main
 
 clean:
 	rm main
